# jt

./: noxfile.py  pyproject.toml
docs/: devel-tasks.rst
jt/: cli.py  environ.py  sublist.py
tests/: test_cli.py  test_environ.py  test_sublist.py
