[tool.poetry]
name = "jt"
version = "0.1.0"
description = "JT is a template expander"
authors = ["Basalisk <basalisk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
