[tool.poetry]
name = "jt"
version = "0.1.0"
description = "JT is a template expander"
authors = ["Basalisk <basalisk@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
jt = "jt.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[tool.coverage.paths]
source = [".", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["jt"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
